[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.4"
url = "2.3.1"
wasm-bindgen = "0.2"
